src/test/deca/context/invalid/sansObj/eq-binaire-float.deca
// Description:
//          Utilisation de l'opérateur == avec un float et un bool
//
// Résultat:
//Comparaison entre deux membres incompatibles
//
{
    boolean a;
    float b = 1.23;
    boolean c = (a==b);
}